# fouine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
fouine/: CMakeLists.txt
fouine/fouine-parser/: CMakeLists.txt  readme.md
fouine/fouine-parser/inc/: parser.h
fouine/fouine-parser/src/: parser.cpp
fouine/fouine-parser/test/: machine.cpp
fouine/fouine-rest/: CMakeLists.txt
fouine/fouine-rest/inc/: client.hpp
fouine/fouine-rest/src/: client.cpp
fouine/fouine-rest/test/: client.cpp  main.cpp
fouine/fouine-sh/: main.cpp
scripts/: format.sh  lint.sh
